--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@radix-ui/react-icons": "^1.3.0",
+    "@supabase/supabase-js": "^2.38.1",
     "ag-grid-community": "^30.2.0",
     "ag-grid-react": "^30.2.0",
     "class-variance-authority": "^0.7.0",
