--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/material": "^5.14.14",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.38.1",
     "ag-grid-community": "^30.2.0",
     "ag-grid-react": "^30.2.0",
