--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase-cache-helpers/postgrest-swr": "^1.1.13",
     "@supabase/supabase-js": "^2.38.4",
     "ag-grid-community": "^30.2.0",
     "ag-grid-react": "^30.2.0",
