before adding opponnet team on top of week.points.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@supabase-cache-helpers/postgrest-swr": "^1.1.13",
+    "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.38.4",
     "ag-grid-community": "^30.2.0",
     "ag-grid-react": "^30.2.0",
