--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ag-grid-community/core": "^30.2.1",
+    "@ag-grid-community/react": "^30.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
@@ -48,6 +50,7 @@
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
     "postcss": "^8",
+    "supabase": "^1.112.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
